--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postcss-position",
+  "name": "postcss-positioning",
   "version": "0.0.0",
   "description": "PostCSS plugin that makes positioning simple",
   "keywords": [
@@ -11,11 +11,11 @@
   ],
   "author": "Matthias Totschnig <matthias@totschnig.org>",
   "license": "MIT",
-  "repository": "matthias-t/postcss-position",
+  "repository": "matthias-t/postcss-positioning",
   "bugs": {
-    "url": "https://github.com/matthias-t/postcss-position/issues"
+    "url": "https://github.com/matthias-t/postcss-positioning/issues"
   },
-  "homepage": "https://github.com/matthias-t/postcss-position",
+  "homepage": "https://github.com/matthias-t/postcss-positioning",
   "dependencies": {
     "postcss": "^6.0.16"
   },
