Make test script more verbose
- Run jest with --verbose flag
- Run eslint even if tests fail

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postcss-calc": "^6.0.1"
   },
   "scripts": {
-    "test": "jest && eslint *.js"
+    "test": "jest --verbose & eslint *.js"
   },
   "eslintConfig": {
     "extends": [
