--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=b12bb7d24c93c538535fa79eb8f75eaa9188e9ef909c4792174b1db7944a6f98
 language: node_js
 cache: yarn
 node_js:
@@ -5,3 +8,9 @@ node_js:
   - "8"
   - "6"
   - "4"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
