--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-positioning",
   "version": "0.0.0",
-  "description": "PostCSS plugin that makes positioning simple",
+  "description": "Make CSS positioning ridiculously simple",
   "keywords": [
     "postcss",
     "css",
