--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postcss-calc": "^6.0.1"
   },
   "scripts": {
-    "test": "jest --verbose --coverage & eslint *.js"
+    "test": "jest --verbose --coverage && eslint *.js"
   },
   "eslintConfig": {
     "extends": [
