Really setup babel
- build script (`npm run build`) builds the files in src/ through
babel and outputs them to js/
- Test script invokes build script.
- npm ignores src/
- git ignores js/

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "postcss-calc": "^6.0.1"
   },
   "scripts": {
-    "test": "jest --verbose --coverage && eslint *.js"
+    "build": "babel src --out-dir js",
+    "test": "npm run build && jest --verbose --coverage && eslint \"src/**.js\""
   },
   "eslintConfig": {
     "extends": [
