--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["env"]
+    "presets": [
+        [
+            "env",
+            {
+                "targets": {
+                    "node": "4.0"
+                }
+            }
+        ]
+    ],
+    "plugins": [
+        "babel-plugin-object-entries-and-values-to-object-keys"
+    ]
 }
