--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-object-entries-and-values-to-object-keys": "^1.0.1",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
     "eslint-config-postcss": "^2.0.2",
