Make prepublishOnly build src/
so babel will run before publishing to npm

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "scripts": {
     "build": "babel src --out-dir js",
-    "test": "npm run build && jest --verbose --coverage && eslint \"src/**.js\""
+    "test": "npm run build && jest --verbose --coverage && eslint \"src/**.js\"",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
