Set ESLint ecmaVersion to 2018

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "parserOptions": {
+        "ecmaVersion": 2018
+    },
     "extends": [
         "eslint-config-postcss",
         "plugin:import/errors",
