Modify npm package scripts
- `test` script now builds (necessary to run tests) and runs tests
- `checks` script now builds, runs tests, lints
- other scripts remain unchanged
- Travis now runs `checks` script

--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     },
     "scripts": {
         "build": "babel src --out-dir js",
-        "test": "npm run build && jest --verbose --coverage && npm run lint",
+        "test": "npm run build && jest --verbose --coverage",
         "lint": "eslint **/*.js",
+        "checks": "npm run test && npm run lint",
         "prepublishOnly": "npm run build"
     },
     "eslintIgnore": [
