Specify ESLint config path in .codeclimate.yml
In an attempt to make CodeClimate use the eslint-config-postcss fetched
from RawGit. Apparently it didn't see it from the .eslintrc

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,14 +3,16 @@ version: "2"
 prepare:
   fetch:
     - url: "https://cdn.rawgit.com/postcss/eslint-config-postcss/66792de3/index.js"
-      path: "node_modules/eslint-config-postcss/eslint-config.js"
+      path: "eslint-config-postcss/eslint-config.js"
     - url: "https://cdn.rawgit.com/postcss/eslint-config-postcss/66792de3/es5.js"
-      path: "node_modules/eslint-config-postcss/es5.js"
+      path: "eslint-config-postcss/es5.js"
 
 plugins:
   eslint:
     enabled: true
     channel: "eslint-4"
+    config:
+      config: "eslint-config-postcss/eslint-config.js"
 
 exclude_patterns:
   - "test/"
