Add single quotes around lint path
Travis' shell was parsing the path before it got to ESLint, leading
to some files not being analysed.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "scripts": {
         "build": "babel src --out-dir js",
         "test": "npm run build && jest --verbose --coverage",
-        "lint": "eslint **/*.js",
+        "lint": "eslint '**/*.js'",
         "checks": "npm run test && npm run lint",
         "prepublishOnly": "npm run build"
     },
