--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,7 +2,7 @@ version: "2"
 
 prepare:
   fetch:
-    - url: "https://cdn.rawgit.com/matthias-t/eslint-config-postcss/codeclimate/index.js"
+    - url: "https://rawgit.com/matthias-t/eslint-config-postcss/codeclimate/index.js"
       path: "eslint-config-postcss/eslint-config.js"
 
 plugins:
