Add new eslint-config-postcss dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     },
     "homepage": "https://github.com/matthias-t/postcss-positioning",
     "dependencies": {
+        "eslint-config-logux": "^23.0.4",
+        "eslint-config-standard": "^11.0.0",
+        "eslint-plugin-import": "^2.13.0",
+        "eslint-plugin-jest": "^21.18.0",
+        "eslint-plugin-node": "^7.0.1",
+        "eslint-plugin-promise": "^3.8.0",
+        "eslint-plugin-security": "^1.4.0",
+        "eslint-plugin-standard": "^3.1.0",
         "postcss": "^7.0.1"
     },
     "main": "lib/index.js",
@@ -36,7 +44,7 @@
     "scripts": {
         "build": "babel src --out-dir lib",
         "test": "jest --verbose --coverage",
-        "lint": "eslint '**/*.js'",
+        "lint": "eslint **/*.js",
         "checks": "npm run test && npm run lint",
         "prepublishOnly": "npm run build"
     },
