Fix weird jest jsdom issue

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "img"
     ],
     "jest": {
+        "testEnvironment": "node",
         "transform": {
             "^.+\\.jsx?$": "babel-jest"
         }
